# src

./: README.md  configuration.md  inverse_kinematics_node.py
bascorro_launch/: CMakeLists.txt  package.xml
bascorro_launch/launch/: inverse_kinematics.launch  motion_control.launch  start_dynamixel_control.launch
dynamixel_control/: CMakeLists.txt
dynamixel_control/config/: dynamixel.config
dynamixel_control/src/: dynamixel_control_node.py
ik_listener/: CMakeLists.txt  package.xml
ik_listener/src/: ik_listener.py
ik_listener/src/node/: ik_listener.py
ik_solver/: CMakeLists.txt  package.xml
ik_solver/src/: ik_solver.py
ik_solver/src/node/: ik_solver.py
interface/: CMakeLists.txt  package.xml
interface/src/: interface.py  main.ui
inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/msg/: FullBodyIK.msg  IKTarget.msg  offset.msg
inverse_kinematics/src/: inverse_kinematics_node.py
motion_control/: CMakeLists.txt  package.xml
motion_control/msg/: walkParam.msg
motion_control/src/: motion_control_node.py  motion_control_node2.py  motion_control_node3.py
